升级0.0.15 ^ common模块utils安全加固; ^ 去除Base64类; ^ 简化内部类java命名; ^ 修复上一版本在JDK6某些场景报错问题;